--- a/JasperreportsStudy/pom.xml
+++ b/JasperreportsStudy/pom.xml
@@ -7,6 +7,27 @@
 	<version>1.0</version>
 	<name>com.promise.cn</name>
 	<dependencies>
+		<dependency>
+			<groupId>net.sf.jasperreports</groupId>
+			<artifactId>jasperreports</artifactId>
+			<version>4.6.0</version>
+		</dependency>
+		<dependency>
+			<groupId>mysql</groupId>
+			<artifactId>mysql-connector-java</artifactId>
+			<version>5.1.18</version>
+		</dependency>
+		<dependency>
+			<groupId>junit</groupId>
+			<artifactId>junit</artifactId>
+			<version>4.8.1</version>
+		</dependency>
+		<dependency>
+		    <groupId>javax.servlet</groupId>
+  			<artifactId>servlet-api</artifactId>
+		    <version>2.5</version>
+		    <scope>provided</scope>
+		</dependency>
 	</dependencies>
 	<build>
 		<finalName>com.promise.cn</finalName>
@@ -18,14 +39,16 @@
 			</plugin>
 			<plugin>
 				<artifactId>maven-war-plugin</artifactId>
+				<configuration>
+					<webXml>src/main/web/WEB-INF/web.xml</webXml>
+				</configuration>
 			</plugin>
 			<plugin>
 				<groupId>org.mortbay.jetty</groupId>
 				<artifactId>maven-jetty-plugin</artifactId>
 				<version>6.1.10</version>
 				<configuration>
-					<contextPath>/jasperreportsstudy</contextPath>
-					<!-- webDefaultXml>webdefault.xml</webDefaultXml> -->
+					<webXml>src/main/web/WEB-INF/web.xml</webXml>
 					<connectors>
 						<connector implementation="org.mortbay.jetty.nio.SelectChannelConnector">
 							<port>8888</port>
